force-app/main/default/objects/Leave_Type_Definition__c/Leave_Type_Definition__c.object-meta.xml
<CustomObject>
    <label>Leave Type</label>
    <nameField>
        <label>Leave Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leave Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>