force-app/main/default/objects/Leave_Type_Definition__c/fields/Allow_Carryover__c.field-meta.xml
<CustomField>
    <fullName>Allow_Carryover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Carryover</label>
    <type>Checkbox</type>
</CustomField>