force-app/main/default/objects/Leave_Type_Definition__c/fields/Approval_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Approval_Group_Key__c</fullName>
    <label>Approval Group Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>