force-app/main/default/objects/Leave_Type_Definition__c/fields/Approval_Mode__c.field-meta.xml
<CustomField>
    <fullName>Approval_Mode__c</fullName>
    <label>Approval Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manager Only</fullName>
                <default>true</default>
                <label>Manager Only</label>
            </value>
            <value>
                <fullName>Manager Then HR</fullName>
            </value>
            <value>
                <fullName>HR Only</fullName>
            </value>
            <value>
                <fullName>Configurable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>