force-app/main/default/objects/Leave_Type_Definition__c/fields/Auto_Approve_Below_Days__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve_Below_Days__c</fullName>
    <label>Auto Approve Below Days</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>