force-app/main/default/objects/Leave_Type_Definition__c/fields/Carryover_Expire_Day__c.field-meta.xml
<CustomField>
    <fullName>Carryover_Expire_Day__c</fullName>
    <label>Carryover Expire Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>