force-app/main/default/objects/Leave_Type_Definition__c/fields/Carryover_Limit__c.field-meta.xml
<CustomField>
    <fullName>Carryover_Limit__c</fullName>
    <label>Carryover Limit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>