force-app/main/default/objects/Leave_Type_Definition__c/fields/Escalate_Above_Days__c.field-meta.xml
<CustomField>
    <fullName>Escalate_Above_Days__c</fullName>
    <label>Escalate Above Days</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>