force-app/main/default/objects/Leave_Type_Definition__c/fields/Escalation_Target__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Target__c</fullName>
    <label>Escalation Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
                <default>true</default>
                <label>HR</label>
            </value>
            <value>
                <fullName>Manager Manager</fullName>
            </value>
            <value>
                <fullName>Custom Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>