force-app/main/default/objects/Leave_Type_Definition__c/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <label>Policy Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>