force-app/main/default/objects/Leave_Type_Definition__c/fields/Requires_HR_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_HR_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires HR Approval</label>
    <type>Checkbox</type>
</CustomField>