force-app/main/default/objects/Leave_Type_Definition__c/fields/Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Code__c</fullName>
    <label>Type Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>